test/Fail/Erasure-Illegal-Access.err
Erasure-Illegal-Access.agda:6.10-11: error: [VariableIsErased]
Variable x is declared erased, so it cannot be used here
when checking that the expression x has type A
